--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -212,6 +212,7 @@
   .modal-body {
     padding: 30px 20px;
     text-align: -webkit-center;
+    text-align: center;
   }
   .video-frame-box{
     width: 100%;
